2008-03-26  Jaroslav Hajek <highegg@gmail.com>

	* config.log, config.status, config.h, Makefile: remove.
	* configure.in: add support for -fPIC flags.
	* configure, config.h.in: regenerate.
	* Makefile.in: add distclean target

2008-02-28  Jaroslav Hajek <highegg@gmail.com>

	* corrf.f: added Matern-3/2 and Matern-5/2 correlation funcs
	* get_corrf.c, forsubs.h: included the new correlation funcs
	* gpr_train.cc: documentation for the new correlation funcs

2008-02-24  Jaroslav Hajek <highegg@gmail.com>

	* optdrv.f: implement objective reduction stopping criterion
	* gprmod.h, train.c, gpr_train.cc: add support for the new feature
	* forsubs.h nl0gpr.f: correct subroutine name
	* train.c: correct CP array size

2008-02-19  Jaroslav Hajek <highegg@gmail.com>

	* *.h *c *.cc: adjusted C/C++ sources to meet GNU coding standards

2008-02-18  Jaroslav Hajek <highegg@gmail.com>

	* forsubs.h gprmod.h predict.c train.c setup.c: added const modifiers
	where appropriate.
	* grp_train, gpr_predict: replaced Array::fortran_vec with Array::data
	where appropriate, to prevent unnecessary copying.

2008-02-15  Jaroslav Hajek <highegg@gmail.com>

	* octgpr.m: improved demo.

2008-02-13  Jaroslav Hajek <highegg@gmail.com>

	* train.c: correct allocation and copying result values.
	* nldgpr.f: compute 2nd derivative by a better formula.
	* gpr_train.cc: improved documentation
	* gpr_predict.cc: improved documentation

2008-02-12  Jaroslav Hajek <highegg@gmail.com>

	* dscrot.f: correct the W*D*x and W'*D*x sequence.
	* optdrv.f: correct calls to dscrot.f

2008-02-08  Jaroslav Hajek <highegg@gmail.com>

	* train.c: corrected C->Fortran calls in to use proper #defines from forsubs.h
	* vmfac.f vmcmp.f trstep.f: deleted (no use)
	* optdrv.f: cosmetic changes 
	* ../inst/demo_octgpr.m: added copyright 
	* ../TODO: modified

2008-02-07  Jaroslav Hajek <highegg@gmail.com>

	* gpr_train.cc: corrected inline Texinfo documentation 
	* ChangeLog: added this file
